# nadir

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  README  TODO  aboutWidget.ui  build.sh  capture.cpp  confWidget.cpp  confWidget.h  confWidget.ui  confWidget_copia.ui  config.h  configure  grabber.cpp  grabber.h  jackcapture.h  keyboardGrabber.cpp  keyboardGrabber.h  main.cpp  mainWidget.cpp  mainWidget.h  mainWidget.ui  meter.cpp  meter.h  microphone.cpp  microphone.h  nadir.desktop  nadir.pro  nadir.qc  nadir.qrc  ringbuffer.h  scanLine.cpp  scanLine.h  settings.cpp  settings.h  (+7 more)
debian/: changelog  control  copyright  docs
debian/manpages/: nadir.1
doc/: diagram.dia  gpl  keys
images/gimp/: nadir.xcf
src/: CMakeLists.txt  capture.cpp  capture.h  common.h  confWidget.cpp  confWidget.h  confWidget.ui  fixx11h.h  grabber.cpp  grabber.h  jackcapture.cpp  jackcapture.h  key.cpp  key.h  keyboard.cpp  keyboard.h  main.cpp  mainWidget.cpp  mainWidget.h  mainWidget.ui  meter.cpp  meter.h  microphone.cpp  microphone.h  mouse.cpp  mouse.h  nadir.pro  nadir.qrc  ringbuffer.cpp  ringbuffer.h  scanLine.cpp  scanLine.h  settings.cpp  settings.h
src/i18n/: en.ts  i18n.pri
src/images/: CMakeLists.txt
src/translations/: nadir_en.ts  nadir_es.ts  translations.pri
